additional resource added for scripts